@@ -1,6 +1,6 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-0.4
+Version: 0.3-0.5
 Date: 2007-03-12
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
