@@ -40,6 +40,7 @@ exportMethods(
               "TermDocMatrix",
               "Dictionary",
               "DirSource",
+              "VectorSource",
               "CSVSource",
               "ReutersSource",
               "GmaneSource",
@@ -154,6 +155,7 @@ exportClasses("TextDocument",
               "Dictionary",
               "Source",
               "DirSource",
+              "VectorSource",
               "CSVSource",
               "ReutersSource",
               "GmaneSource",
