@@ -2,6 +2,8 @@
 
 	* R/textdoccol.R (tmMap): Introduced lazy mapping.
 
+	* R/source.R: Added VectorSource.
+
 2008-02-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Language codes should be in ISO 639-1 format.
